--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,12 @@ body{
 .texto-total-carrito{
     margin-left: 1rem;
 }
+.carrito{
+    border-top: 2px solid white;
+}
+
+.alerta{
+    box-shadow: 0px 0px 17px 4px rgba(0,0,0,0.52);
+-webkit-box-shadow: 0px 0px 17px 4px rgba(0,0,0,0.52);
+-moz-box-shadow: 0px 0px 17px 4px rgba(0,0,0,0.52);
+}
